--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Data
+data/
+
+# Mac Thing
+.DS_Store
+
+### Everything below was pre-defined by GitHub for Python projects
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
