--- a/environment_cpu_arcface.yml
+++ b/environment_cpu_arcface.yml
@@ -11,7 +11,6 @@ dependencies:
   - cpuonly
   - pytorch
   - torchvision
-  - torchaudio
   - onnx  # For ArcFace
   - pip:
     - facenet_pytorch
@@ -22,6 +21,6 @@ dependencies:
     - onnxruntime
     - pandas
     - pillow
-    - scipy=1.9.3  # Because there is a problem with building 1.10 on Mac OSX Mojave (Zirk's computer)
+    - scipy==1.9.3  # Because there is a problem with building 1.10 on Mac OSX Mojave (Zirk's computer)
     - scikit-image
     - tqdm
