Some minor edits removing code&organising imports
It's gonna be quite an effort to get everything in a nice way, I fear
Probably should've been doing that during the project, cause I think
there's quite a bit of duplicate code as well

Signed-off-by: 12690368 <zirk.seljee@student.uva.nl>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
+arcfaceresnet100-8.tar.gz
+arcface_resnet100/*
+
+Figure.png
+test.png
+
+environment_cpu_arcface_mxnet.yml
+
 *cluster*.png
 experiments/
+experiments-rerun/
+
 # Mac Thing
 .DS_Store
+
+### VS Code
+.vscode
+*/.vscode
 
 ### Everything below was pre-defined by GitHub for Python projects
 
