Do not use numpy 1.24 in environment
Fixes a bug with MTCNN creating a ragged array for the detected faces
if batching.  (Now has a warning that gets ignored.)

Signed-off-by: 12690368 <zirk.seljee@student.uva.nl>

--- a/environment_gpu.yml
+++ b/environment_gpu.yml
@@ -14,7 +14,7 @@ dependencies:
   - pip:
     - facenet_pytorch==2.5.2
     - matplotlib
-    - numpy
+    - numpy<1.24  # facenet_pytorch mtcnn cannopt work with numpy 1.24 yet
     - pandas
     - pillow
     - seaborn
