--- a/environment_cpu.yml
+++ b/environment_cpu.yml
@@ -7,12 +7,16 @@ channels:
 dependencies:
   - python=3.10.*
   - pip=22.3.*
+  - ipython
   - cpuonly
   - pytorch=1.13.*
   - torchvision=0.14.*
   - pip:
     - facenet_pytorch==2.5.2
+    - ipywidgets
+    - jupyter
     - matplotlib
+    - notebook
     - numpy<1.24  # facenet_pytorch mtcnn cannopt work with numpy 1.24 yet
     - pandas
     - pillow
